@@ -113,7 +113,8 @@ interface
 - new method SCIPsolIsOriginal() that returns whether a solution is defined on the original variables
 - SoPlex LPI supports setting of SCIP_LPPAR_DUALFEASTOL when using SoPlex version 1.6.0.5 and higher
 - new method SCIPsetBasePointClosecuts() to set the base point for close cut separation
-- method SCIPvarGetProbvarSum() is not public anymore, use SCIPgetProbvarSum() instead
+- method SCIPvarGetProbvarSum() is not public anymore, use SCIPgetProbvarSum() instead;
+  also method SCIPexprtreeRemoveFixedVars() is not public anymore
 
 performance improvements:
 - improved scaling of linear constraints, linear constraints with integral variables will now be scale with
